<resources>
    <string name="app_name">Let\'s Chat!</string>


    <!-- Sort by Uses -->

    <!-- Strings for test -->
    <string name="test_chat_screen">채팅 화면 테스트</string>
    <string name="test_main_screen">메인 화면 테스트</string>

    <!-- Sample Strings -->
    <string name="sample_name">곽현민</string>
    <string name="sample_id">myID</string>
    <string name="sample_pw">myPassword</string>
    <string name="sample_school">우리학교</string>
    <string name="sample_class">11반</string>
    <string name="sample_gender">남성</string>
    <string name="sample_friend">홍길동</string>
    <string name="sample_birth">2004년 8월 23일</string>
    <string name="sample_grade">중학교 3학년</string>
    <string name="sample_grade_class">3학년 11반</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_up">회원가입</string>
    <string name="action_enter_info">정보 입력</string>
    <string name="text_id">아이디</string>
    <string name="text_id_en">ID</string>
    <string name="text_pw">비밀번호</string>
    <string name="text_pw_en">PW</string>
    <string name="text_pw_check">비밀번호 확인</string>
    <string name="text_name">이름</string>
    <string name="text_school">학교</string>
    <string name="text_birth">생년월일</string>
    <string name="text_grade">학년</string>
    <string name="text_gender">성별</string>
    <string name="text_class">반</string>
    <string name="error_field_required">내용을 입력해 주세요.</string>

    <!-- Strings related to buttons -->
    <string name="action_next">다음</string>
    <string name="action_previous">이전</string>
    <string name="action_join">참가</string>
    <string name="action_message">메시지</string>


    <!-- Sort by Activities -->

    <!-- activity_register -->
    <string name="text_info">정보</string>
    <string name="error_invalid_name">한글, 10자리까지 허용</string>
    <string name="error_invalid_id">영문, 숫자 허용, 3자리~20자리</string>
    <string name="error_overlapping_id">이미 있는 아이디입니다.</string>
    <string name="error_invalid_password">영문, 숫자 허용, 6자리~20자리</string>
    <string name="error_incorrect_password">비밀번호가 일치하지 않습니다.</string>

    <!-- activity_register_birth -->
    <string name="error_register_birth_invalid_birth">11세~19세만 회원가입이 가능합니다.</string>
    <string name="text_register_birth_default_birth">2001/1/1</string>

    <!-- activity_register_gender -->
    <string name="text_register_gender_male">남성</string>
    <string name="text_register_gender_female">여성</string>

    <!-- activity_register_school -->
    <string name="text_register_school_name">학교이름</string>
    <string name="text_register_school_address">학교주소</string>
    <string name="hint_register_school_search">학교명 입력</string>
    <string name="text_register_school_search">학교검색</string>
    <string name="text_register_school_help">아래 목록 중 재학 중인 학교를 누르고\n다음 버튼을 누르세요.</string>

    <!-- activity_register_completed -->
    <string name="text_register_completed_your_name">홍길동님,</string>
    <string name="text_register_completed_message">회원가입이 완료되었습니다!</string>
    <string name="text_register_completed_your_id">YourID</string>
    <string name="text_register_completed_your_pw">YourPassword</string>
    <string name="text_register_completed_your_school">YourSchool</string>
    <string name="action_go_to_login_screen">로그인 화면으로 가기</string>

    <!-- activity_main -->
    <string name="text_main">메인</string>
    <string name="text_main_my_school">나의 학교</string>
    <string name="text_main_my_class">나의 반</string>
    <string name="text_main_my_gender">나의 성별</string>
    <string name="text_main_friend">친구</string>
    <string name="cd_main_user">user image</string>
    <string name="cd_icon_school">school icon</string>
    <string name="cd_icon_class">class icon</string>
    <string name="cd_icon_gender">gender icon</string>

    <!-- activity_chat -->
    <string name="hint_chat_type_message">메시지를 입력하세요…</string>
    <string name="text_chat_room_name">방 이름</string>
    <string name="text_chat_person_send">발신자</string>
    <string name="text_chat_message">메시지</string>
    <string name="text_chat_time">시간</string>
    <string name="cd_show_people">대화 상대를 표시하는 버튼</string>

    <!-- activity_chat_people -->
    <string name="text_chat_people">사람</string>
</resources>
