<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterCompletedActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_register_completed_your_name"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:id="@+id/name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_register_completed_message"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_id"
                android:textColor="#000000"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_id"
                android:textSize="20sp"
                android:id="@+id/id"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pw"
                android:textColor="#000000"
                android:textSize="15sp"
                android:layout_marginTop="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_pw"
                android:textSize="20sp"
                android:id="@+id/pw"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_school"
                android:textColor="#000000"
                android:textSize="15sp"
                android:layout_marginTop="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_school"
                android:textSize="20sp"
                android:id="@+id/school"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/shape_button"
            android:text="@string/action_go_to_login_screen"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:id="@+id/go_to_login"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>