<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/title_marginTop">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/title_marginStart"
            android:text="@string/action_sign_in"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="30dp">

                <EditText
                    android:id="@+id/ID"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:maxLines="1"
                    android:hint="@string/text_id"
                    android:inputType="text"
                    android:background="@drawable/rounded_edittext" />

                <EditText
                    android:id="@+id/PW"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:maxLines="1"
                    android:hint="@string/text_pw"
                    android:inputType="textPassword"
                    android:background="@drawable/rounded_edittext"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/login_bt"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="10dp"
                        android:background="@drawable/shape_button_accent"
                        android:text="@string/action_sign_in"
                        android:textSize="20sp"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/register_bt"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="10dp"
                        android:background="@drawable/shape_button"
                        android:text="@string/action_sign_up"
                        android:textSize="20sp"
                        android:textColor="@color/colorWhite"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_chat_screen"
                    android:id="@+id/go_to_chat"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_main_screen"
                    android:id="@+id/go_to_main"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>