<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_chat_object"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_chat_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start">

        <LinearLayout
            android:id="@+id/layout_chat_floor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/chat_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_chat_person_send"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/chat_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/text_chat_time"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_chat_floor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/chat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_chat_message"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>